# playground-gunicorn

./: .dockerignore  Dockerfile  README.md  pyproject.toml
server/: manage.py
server/conf.d/: gunicorn.conf.py
server/config/: asgi.py  settings.py  wsgi.py
