[tool.poetry]
name = "playground-gunicorn"
version = "0.1.0"
description = "Testing gunicorn with django"
authors = ["sudosubin <sudosubin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
